# triangulations

./: CMakeLists.txt  README.md  main.cpp
tools/: build.sh
